force-app/main/default/objects/PartnerAccount__c/PartnerAccount__c.object-meta.xml
<CustomObject>
    <description>OOB Partner Accounts are not available in Lightening Experience. This custom object will perform the same function as Standard Partner Accounts.</description>
    <label>Partner Account</label>
    <nameField>
        <displayFormat>Partnr{000000}</displayFormat>
        <label>Partner Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>