force-app/main/default/objects/PartnerAccount__c/fields/PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Accounts (Partner Account)</relationshipLabel>
    <relationshipName>Partner_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>