force-app/main/default/objects/PartnerAccount__c/fields/PartnerAccountRole__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountRole__c</fullName>
    <label>Partner Account Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cargill Distributor</fullName>
            </value>
            <value>
                <fullName>Distributor Customer</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Advertiser</fullName>
            </value>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Institution</fullName>
            </value>
            <value>
                <fullName>System Integrator</fullName>
            </value>
            <value>
                <fullName>VAR/Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>